--- a/Style.css
+++ b/Style.css
@@ -61,8 +61,14 @@ h2 {
     width: 35%;
     border: solid 1px black;
 }
+.icons {
+    text-align: center;
+    margin: 0px;
+}
 .mailicon, .githubicon, .googleplusicon {
     display: inline;
+    padding: 0px;
+    list-style: none;
     border: 1px white solid;
     text-align: center;
     border-radius: 100%;
