--- a/Style.css
+++ b/Style.css
@@ -77,14 +77,20 @@ h2 {
 .githubicon:hover {
     animation-name:icons;
     animation-duration: 1s;
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
 .googleplusicon:hover {
     animation-name:icons;
     animation-duration: 1s;
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
 .mailicon:hover {
     animation-name:icons;
     animation-duration: 1s;
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
 ul {
   padding: 0px;
